--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "2.1.1"
   },
   "devDependencies": {
