--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "webpack": "./node_modules/.bin/webpack",
     "start": "react-scripts start",
     "serv": "./node_modules/.bin/webpack-dev-server --hot",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test:watch": "jest --watch --coverage"
   },
   "author": "michal",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "material-ui": "^1.0.0-beta.29",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.0.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
@@ -28,12 +30,18 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.1.4",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.13",
     "postcss-cssnext": "^3.0.2",
@@ -46,5 +54,10 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.7.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.css$": "identity-obj-proxy"
+    }
   }
 }
