--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
-    "resolve-url-loader": "2.1.1"
+    "resolve-url-loader": "2.1.1",
+    "sinon": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -51,6 +53,7 @@
     "react-css-modules": "^4.7.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
